--- a/Testing Stuff/MCMA-Sorting-Enhancement.html
+++ b/Testing Stuff/MCMA-Sorting-Enhancement.html
@@ -678,8 +678,8 @@ knitr::kable(question$Table)</code></pre>
 <h3>Lets take a different question from the survey which has three NA type choices with recode values of 997, 998 and 999</h3>
 <pre class="r"><code>question &lt;- questions[[8]]</code></pre>
 </div>
-<div id="by-default-the-table-will-still-sort-by-n-then-by-choices-but-all-of-the-na-choices-will-be-brought-to-the-bottom-and-sorted-at-the-bottom-in-order-of-descending-recode-value-so-the-choice-with-value-997-will-be-first-and-the-choice-with-value-999-will-be-last." class="section level3">
-<h3>By default, the table will still sort by N then by choices, but all of the NA choices will be brought to the bottom and sorted at the bottom in order of descending recode value, so the choice with value 997 will be first, and the choice with value 999 will be last.</h3>
+<div id="by-default-the-table-will-still-sort-by-n-then-by-choices-but-all-of-the-na-choices-will-be-brought-to-the-bottom-and-sorted-at-the-bottom-in-order-of-ascending-recode-value-so-the-choice-with-value-997-will-be-first-and-the-choice-with-value-999-will-be-last." class="section level3">
+<h3>By default, the table will still sort by N then by choices, but all of the NA choices will be brought to the bottom and sorted at the bottom in order of ascending recode value, so the choice with value 997 will be first, and the choice with value 999 will be last.</h3>
 <pre class="r"><code>question &lt;- mc_multiple_answer_results(question, original_first_rows)
 
 ## This code prints that table out:
