Updating the FAQ

--- a/inst/testdata/FAQ/AppFAQ.html
+++ b/inst/testdata/FAQ/AppFAQ.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Emma Morgan" />
+<meta name="author" content="Tufts OIR" />
 
 
 <title>QualtricsTools Shiny App</title>
@@ -377,8 +377,8 @@ summary {
 
 <h1 class="title toc-ignore">QualtricsTools Shiny App</h1>
 <h3 class="subtitle">Frequently Asked Questions</h3>
-<h4 class="author">Emma Morgan</h4>
-<h4 class="date">5/18/2020</h4>
+<h4 class="author">Tufts OIR</h4>
+<h4 class="date">3/30/2021</h4>
 
 </div>
 
@@ -387,12 +387,10 @@ summary {
 <h1>QualtricsTools Shiny App Frequently Asked Questions</h1>
 <ol style="list-style-type: decimal">
 <li><p><strong>How do I run the QualtricsTools reporting app?</strong></p>
-<p>Install the QualtricsTools package from GitHub: <code>devtools::install_packages(&quot;emma-morgan/QualtricsTools&quot;)</code>. Once the package is installed, load the QualtricsTools functions by running <code>library(QualtricsTools)</code>. Finally, launch the QualtricSTools app by running <code>app()</code> from the R command line.</p></li>
+<p>Install the QualtricsTools package from GitHub: <code>devtools::install_packages(&quot;tufts-oir/QualtricsTools&quot;)</code>. Once the package is installed, load the QualtricsTools functions by running <code>library(QualtricsTools)</code>. Finally, launch the QualtricSTools app by running <code>app()</code> from the R command line.</p></li>
 <li><p><strong>How do I load my survey project to create reports?</strong></p>
 <p>Creating reports with the QualtricsTools app requires a Qualtrics Suvey File (.qsf) and data exported from Qualtrics (.csv). See the QualtricsTools wiki for information about .qsf and .csv usage requirements and guidelines. Use the File Uploader in the left sidebar to select your survey .qsf and .csv.</p>
 <p>You can navigate through your file system to choose the .qsf and .csv files using the “Browse” buttons below each selection note. Save yourself some time by entering the path to your project in the text entry box above “Choose QSF Survey File”. This will a starting point to browse for the survey .qsf and .csv.</p></li>
-<li><p><strong>What is “Unchecked Legacy View Results (3 header rows &amp; QIDs)”?</strong></p>
-<p>Qualtrics has many ways to export data. QualtricsTools is configured to work with specific data export formats. For best results, use the Legacy Exporter in Qualtrics and uncheck the box for “Legacy View Results”. QualtricsTools is currently not configured to work with the Data Table export format.</p></li>
 <li><p><strong>Can I preview my downloaded reports in the app?</strong></p>
 <p>Yes! Navigate to “Processed Results” in the left sidebar. You should now see five tabs displayed across the top.</p>
 <ul>
@@ -425,7 +423,7 @@ summary {
 <p>The left sidebar has an option for “Include/Exclude Responses”. This will show a list of questions with checkboxes on the left side of each. Uncheck a question’s box and click “apply” to excluee this question from reporting. You should see this updated in the results table and appendix previews under “Processed Results.” To add the question back into reports, just re-check the box and click apply.</p></li>
 <li><p><strong>I have other questions. Who can I ask?</strong></p>
 <p>If you are interested in further customizing your reports, consider using the R command line. Additional information about QualtricsTools functions is available on the QualtricsTools wiki.</p>
-<p>Package maintenance is overseen by Emma Morgan in the Tufts University Office of Institutional Research (<a href="mailto:emma.morgan@tufts.edu" class="email">emma.morgan@tufts.edu</a>).</p></li>
+<p>Package maintenance is overseen by the Tufts University Office of Institutional Research (<a href="mailto:INSTResearch@tufts.edu" class="email">INSTResearch@tufts.edu</a>).</p></li>
 </ol>
 </div>
 
